--- a/languages.toml
+++ b/languages.toml
@@ -4,6 +4,11 @@ name = "cpp"
 auto-format = true
 indent = { tab-width = 4, unit = "\t" }
 
+[[language]]
+name = "cmake"
+auto-format = true
+indent = { tab-width = 4, unit = "\t" }
+
 # Go
 [[language]]
 name = "go"
@@ -16,6 +21,7 @@ name = "rust"
 auto-format = true
 indent = { tab-width = 4, unit = "\t" }
 
+# Python
 [[language]]
 name = "python"
 auto-format = true
@@ -25,3 +31,9 @@ roots = ["pyproject.toml", "setup.py", "Poetry.lock", ".git"]
 formatter = {command = 'black', args = ["--quiet", "-"]}
 language-server = { command = "pyright-langserver", args = ["--stdio"] }
 config = ""
+
+# Bash
+[[language]]
+name = "bash"
+auto-format = true
+indent = { tab-width = 4, unit = "\t" }
