--- a/config.toml
+++ b/config.toml
@@ -29,3 +29,5 @@ display-inlay-hints = true
 [keys.normal]
 g = { "left" = "goto_line_start",  "right" = "goto_line_end" }
 
+[keys.select]
+g = { "left" = "goto_line_start",  "right" = "goto_line_end" }
