--- a/languages.toml
+++ b/languages.toml
@@ -24,11 +24,9 @@ indent = { tab-width = 4, unit = "\t" }
 # Python
 [[language]]
 name = "python"
-roots = ["pyproject.toml", "setup.py", "Poetry.lock", ".git"]
-language-server = { command = "pyright-langserver", args = ["--stdio"] }
 auto-format = true
 formatter = { command = 'black', args = ["--quiet", "-"] }
-config = ""
+roots = ["pyproject.toml", "setup.py", ".git"]
 
 # Bash
 [[language]]
