--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,17 @@
-theme = "solarized_dark"
+# Theme
+theme = "fleet_transparent"
 
-# Editor options
+# Editor
 [editor]
 line-number = "relative"
 cursorline = true
 true-color = true
 color-modes = true
+gutters = ["line-numbers","diff", "diagnostics",  "spacer"]
+
+[editor.lsp]
+display-messages = true
+display-inlay-hints = true
 
 [editor.cursor-shape]
 insert = "bar"
@@ -21,11 +27,7 @@ mode.normal = "NORMAL"
 mode.insert = "INSERT"
 mode.select = "SELECT"
 
-[editor.lsp]
-display-messages = true
-display-inlay-hints = true
-
-# Key remappings
+# Keymap
 [keys.normal]
 g = { "left" = "goto_line_start",  "right" = "goto_line_end" }
 
