--- a/runtime/themes/tokyonight_transparent.toml
+++ b/runtime/themes/tokyonight_transparent.toml
@@ -1,12 +1,35 @@
 inherits = "tokyonight"
-"ui.background" = {}
 
-"function" = { fa = "blue" }
-"variable.parameter" = { fa = "yellow" }
-"keyword" = { fa = "cyan" }
-"keyword.function" = { fa = "magenta" }
+"ui.background" = {}
+"ui.linenr" = "Gray 70"
+"ui.linenr.selected" = "Gray 110"
+
+"comment" = { fg = "comment", modifiers = [""] }
+"constant" = { fg = "orange" }
+"constant.character.escape" = { fg = "magenta" }
+"function" = { fg = "blue", modifiers = [""] }
+"function.macro" = { fg = "cyan" }
+"keyword" = { fg = "cyan", modifiers = [""] }
+"keyword.control" = { fg = "magenta" }
+"keyword.control.import" = { fg = "cyan" }
+"keyword.operator" = { fg = "turquoise" }
+"keyword.function" = { fg = "magenta", modifiers = [""] }
+"operator" = { fg = "turquoise" }
+"punctuation" = { fg = "turquoise" }
+"string" = { fg = "light-green" }
+"string.regexp" = { fg = "light-blue" }
+"tag" = { fg = "red" }
+"type" = { fg = "teal" }
+"namespace" = { fg = "blue" }
+"variable" = { fg = "white" }
+"variable.builtin" = { fg = "red" }
+"variable.other.member" = { fg = "green" }
+"variable.parameter" = { fg = "yellow", modifiers = [""] }
 
 [palette]
-background = "#24283b"
-background_highlight = "#373d5a"
-background_menu = "#1f2335"
+"Gray 70" = "#5d5d5d"
+"Gray 110" = "#c2c2c2"
+
+"background" = "#24283b"
+"background_menu "= "#1f2335"
+"background_highlight "= "#373d5a"
