--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ line-number = "relative"
 cursorline = true
 true-color = true
 color-modes = true
+bufferline = "multiple"
 gutters = ["line-numbers","diff", "diagnostics",  "spacer"]
 
 [editor.lsp]
