--- a/languages.toml
+++ b/languages.toml
@@ -1,47 +1,50 @@
 # C++
 [[language]]
 name = "cpp"
-auto-format = true
-indent = { tab-width = 4, unit = "\t" }
+auto-format = false
+indent = { tab-width = 4, unit = "    " }
 
 [[language]]
 name = "cmake"
-auto-format = true
-indent = { tab-width = 4, unit = "\t" }
+auto-format = false
+indent = { tab-width = 4, unit = "    " }
 
 # Go
 [[language]]
 name = "go"
-auto-format = true
-indent = { tab-width = 4, unit = "\t" }
+auto-format = false
+indent = { tab-width = 4, unit = "    " }
 
 # Python
 [[language]]
 name = "python"
-auto-format = true
-indent = { tab-width = 4, unit = "\t" }
+auto-format = false
+indent = { tab-width = 4, unit = "    " }
 formatter = { command = "black", args = ["-q", "-"] }
 
 # Rust
 [[language]]
 name = "rust"
-auto-format = true
-indent = { tab-width = 4, unit = "\t" }
+auto-format = false
+indent = { tab-width = 4, unit = "    " }
+
+[language-server.rust-analyzer.config]
+inlayHints.lifetimeElisionHints.enable = false
 
 # Bash
 [[language]]
 name = "bash"
-auto-format = true
-indent = { tab-width = 4, unit = "\t" }
+auto-format = false
+indent = { tab-width = 4, unit = "    " }
 
 # JSON
 [[language]]
 name = "json"
-auto-format = true
-indent = { tab-width = 2, unit = "\t" }
+auto-format = false
+indent = { tab-width = 4, unit = "    " }
 
 # TOML
 [[language]]
 name = "toml"
-auto-format = true
-indent = { tab-width = 4, unit = "\t" }
+auto-format = false
+indent = { tab-width = 4, unit = "    " }
