--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,7 @@ bufferline = "multiple"
 gutters = ["line-numbers","diff", "diagnostics",  "spacer"]
 
 [editor.lsp]
+display-messages = true
 display-inlay-hints = true
 
 [editor.search]
