--- a/languages.toml
+++ b/languages.toml
@@ -18,14 +18,20 @@ indent = { tab-width = 4, unit = "    " }
 # Python
 [[language]]
 name = "python"
+roots = ["pyproject.toml", "pyrightconfig.json"]
 auto-format = false
-indent = { tab-width = 4, unit = "    " }
-formatter = { command = "black", args = ["-q", "-"] }
+indent = { tab-width =4, unit = "    " }
+formatter = { command = "black", args = [
+    "-",
+    "--quiet",
+    "--line-length=120",
+] }
+language-servers = ["pyright"]
 
-[language.config.pylsp.plugins]
-mccabe = { threshold = 20 }
-ruff = { enabled = true, extendSelect = ["I"] }
-mypy = { enabled = true, live_mode = true, strict = true }
+[language-server.pyright]
+command = "pyright-langserver"
+args =["--stdio"]
+config = []
 
 # Rust
 [[language]]
@@ -45,11 +51,11 @@ indent = { tab-width = 4, unit = "    " }
 # JSON
 [[language]]
 name = "json"
-auto-format = false
+auto-format = true
 indent = { tab-width = 4, unit = "    " }
 
 # TOML
 [[language]]
 name = "toml"
-auto-format = false
+auto-format = true
 indent = { tab-width = 4, unit = "    " }
