--- a/languages.toml
+++ b/languages.toml
@@ -20,17 +20,13 @@ indent = { tab-width = 4, unit = "    " }
 name = "python"
 roots = ["pyproject.toml", "pyrightconfig.json"]
 auto-format = false
-indent = { tab-width =4, unit = "    " }
-formatter = { command = "black", args = [
-    "-",
-    "--quiet",
-    "--line-length=120",
-] }
+indent = { tab-width = 4, unit = "    " }
+formatter = { command = "black", args = ["-", "--quiet", "--line-length=120"] }
 language-servers = ["pyright"]
 
 [language-server.pyright]
 command = "pyright-langserver"
-args =["--stdio"]
+args = ["--stdio"]
 config = []
 
 # Rust
@@ -59,3 +55,4 @@ indent = { tab-width = 4, unit = "    " }
 name = "toml"
 auto-format = true
 indent = { tab-width = 4, unit = "    " }
+formatter = { command = "taplo", args = ["fmt", "-"] }
