Add file-types option for bash lsp settings.

--- a/languages.toml
+++ b/languages.toml
@@ -41,6 +41,7 @@ inlayHints.lifetimeElisionHints.enable = false
 # Bash
 [[language]]
 name = "bash"
+file-types = ["sh"]
 auto-format = false
 indent = { tab-width = 4, unit = "    " }
 
