--- a/languages.toml
+++ b/languages.toml
@@ -18,16 +18,19 @@ indent = { tab-width = 4, unit = "    " }
 # Python
 [[language]]
 name = "python"
-roots = ["pyproject.toml", "pyrightconfig.json"]
+roots = ["pyproject.toml", "pyrightconfig.json", "Poetry.lock"]
 auto-format = false
 indent = { tab-width = 4, unit = "    " }
 formatter = { command = "black", args = ["-", "--quiet", "--line-length=120"] }
-language-servers = ["pyright"]
+language-servers = ["pyright", "ruff-lsp"]
 
 [language-server.pyright]
 command = "pyright-langserver"
 args = ["--stdio"]
 config = []
+
+[language-server.ruff-lsp]
+command = "ruff-lsp"
 
 # Rust
 [[language]]
