--- a/languages.toml
+++ b/languages.toml
@@ -1,4 +1,4 @@
-# C and Cpp
+# C and C++
 [[language]]
 name = "cpp"
 auto-format = false
@@ -9,20 +9,6 @@ name = "cmake"
 auto-format = false
 indent = { tab-width = 4, unit = "    " }
 
-# Python
-[[language]]
-name = "python"
-roots = ["pyproject.toml", "pyrightconfig.json", "Poetry.lock"]
-auto-format = false
-indent = { tab-width = 4, unit = "    " }
-formatter = { command = "black", args = ["-", "--quiet", "--line-length=120"] }
-language-servers = ["pyright"]
-
-[language-server.pyright]
-command = "pyright-langserver"
-args = ["--stdio"]
-config = []
-
 # Rust
 [[language]]
 name = "rust"
@@ -31,6 +17,33 @@ indent = { tab-width = 4, unit = "    " }
 
 [language-server.rust-analyzer.config]
 inlayHints.lifetimeElisionHints.enable = false
+
+# Python
+[[language]]
+name = "python"
+roots = ["pyproject.toml", "pyrightconfig.json", "Poetry.lock"]
+auto-format = false
+indent = { tab-width = 4, unit = "    " }
+formatter = { command = "black", args = ["-", "--quiet", "--line-length=120"] }
+language-servers = ["pyright", "ruff"]
+
+[language-server.pyright]
+command = "pyright-langserver"
+args = ["--stdio"]
+
+[language-server.pyright.config]
+reportMissingTypeStubs = false
+
+[language-server.pyright.config.python.analysis]
+typeCheckingMode = "basic"
+autoImportCompletions = true
+
+[language-server.ruff]
+command = "ruff-lsp"
+args = ["--stdio"]
+
+[language-server.ruff.config]
+settings = { args = [] }
 
 # Bash
 [[language]]
