--- a/languages.toml
+++ b/languages.toml
@@ -1,3 +1,20 @@
+# Python
+[[language]]
+name = "python"
+roots = ["pyproject.toml"]
+auto-format = false
+indent = { tab-width = 4, unit = "    " }
+language-servers = ["pyright", "ruff"]
+
+[language-server.pyright]
+command = "pyright-langserver"
+args = ["--stdio"]
+config = []
+
+[language-server.ruff]
+command = "ruff"
+args = ["server", "--preview"]
+
 # C and C++
 [[language]]
 name = "cpp"
@@ -17,28 +34,6 @@ indent = { tab-width = 4, unit = "    " }
 
 [language-server.rust-analyzer.config]
 inlayHints.lifetimeElisionHints.enable = false
-
-# Python
-[[language]]
-name = "python"
-roots = ["pyproject.toml", "pyrightconfig.json", "Poetry.lock"]
-auto-format = false
-indent = { tab-width = 4, unit = "    " }
-formatter = { command = "black", args = ["-", "--quiet", "--line-length=120"] }
-language-servers = ["pyright", "ruff"]
-
-[language-server.pyright]
-command = "pyright-langserver"
-args = ["--stdio"]
-
-[language-server.pyright.config]
-reportMissingTypeStubs = false
-
-[language-server.ruff]
-command = "ruff-lsp"
-
-[language-server.ruff.config]
-settings = { args = ["--ignore", "E501"] }
 
 # Bash
 [[language]]
