--- a/config.toml
+++ b/config.toml
@@ -17,6 +17,9 @@ display-inlay-hints = true
 [editor.search]
 smart-case = true
 
+[editor.soft-wrap]
+enable = true
+
 [editor.file-picker]
 hidden = false
 
