Set editor::inline-diagnostic option to ==> hint <== level.

--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ normal = "block"
 select = "underline"
 
 [editor.inline-diagnostics]
-cursor-line = "warning"
+cursor-line = "hint"
 
 [editor.statusline]
 left = [
