[FEAT] Add lsp config for protobuf.

--- a/languages.toml
+++ b/languages.toml
@@ -59,3 +59,8 @@ name = "toml"
 auto-format = true
 indent = { tab-width = 4, unit = "    " }
 formatter = { command = "taplo", args = ["fmt", "-"] }
+
+# Proto
+[[language]]
+name = "protobuf"
+indent = { tab-width = 4, unit = "    " }
