--- a/languages.toml
+++ b/languages.toml
@@ -24,6 +24,12 @@ name = "go"
 auto-format = true
 indent = { tab-width = 4, unit = "    " }
 
+# Java
+[[language]]
+name = "java"
+auto-format = true
+indent = { tab-width = 4, unit = "    " }
+
 # Python
 [[language]]
 name = "python"
