--- a/themes/sidra_trans.toml
+++ b/themes/sidra_trans.toml
@@ -3,3 +3,6 @@ inherits = "sidra"
 "ui.background" = {}
 
 "ui.virtual.inlay-hint" = { fg = "#646f69" }
+
+"ui.cursor" = { modifiers = ["reversed"] }
+"ui.cursor.match" = { bg = "#163764" }
